prevent shift right what at 0

--- a/public/scss/layout/coffee/_coffee-bag.scss
+++ b/public/scss/layout/coffee/_coffee-bag.scss
@@ -42,7 +42,10 @@
 	height: 80px;
 	overflow: hidden;
 	white-space: nowrap;
-	padding-left: 5%;
+	padding: 0 15px;
+	@include desktop {
+		padding: 0 25px;
+	}
 }
 
 // ===================================================
@@ -53,7 +56,7 @@
 #coffeeBag .bagItem {
 	display: inline-block;
 	background-color: $white;
-	margin-left: 2.5%;
+	margin-left: 10px;
 	width: 120px;
 	height: 100%;
 	overflow: hidden;
